FullSb1-27-apr-15/src/objects/Rotation__c.object
<CustomObject>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rotations</relationshipLabel>
        <relationshipName>Rotations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_has_second_passport__c</fullName>
        <formula>Student__r.Have_second_Passport__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student has second passport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Agent_name_if_used__c</fullName>
        <label>Travel Agent name (if used)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mod D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mod E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mod D &amp; E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UK_Visa_Status__c</fullName>
        <label>UK Visa Status</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US2_Campuses_in_a_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2 US. Campuses in a Row?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Delay?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Interview_Date__c</fullName>
        <label>Visa Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Rejected_Before__c</fullName>
        <inlineHelpText>If a visa application has been rejected in the past, provide the relevant country and details about why it was rejected.</inlineHelpText>
        <label>Visa Rejected Before?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visa_SubStage__c</fullName>
        <label>Visa SubStage</label>
        <picklist>
            <picklistValues>
                <fullName>1a. Initial VC Notification Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1b. Student responsive; requesting visa docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1c. Completing visa docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2a. Visa docs complete, with SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3a. Visa Docs Sent to Home Campus VC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3b. Visa docs with Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Visa Check Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5a. Consulate Appointment Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5b. Visa pending following visa appt/submission of app to embassy or agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6a. Visa Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6b. Visa Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6c. Visa Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6d. Visa Appeal Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6e. Visa Appeal Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Visa/Permit in Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Visa Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAX Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Campus Assistance Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visa_Track_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Track Added?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Track__c</fullName>
        <label>Visa Track</label>
        <referenceTo>Visa_Track__c</referenceTo>
        <relationshipLabel>Rotations</relationshipLabel>
        <relationshipName>Rotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Visa__c</fullName>
        <description>This field is updating from HRP portal</description>
        <label>Visit Visa</label>
        <picklist>
            <picklistValues>
                <fullName>30-day Visit Visa (AED 810)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-month Visit Visa (AED 2850)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not require a Visit Visa for my rotation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_Dependents_Accompany_on_Rotation__c</fullName>
        <inlineHelpText>Let us know how many dependents will join you. This is for both visa and, depending on campus, housing purposes.

LEGAL SPOUSES and DEPENDENT CHILDREN only.

Please do NOT list fiances, significant others, parents, etc.</inlineHelpText>
        <label>Will Dependents Accompany on Rotation?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yellow_Fever_Immunizations_Received__c</fullName>
        <label>Yellow Fever Immunizations Received?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>had_treatment_on_the_NHS_Whilst_in_Uk__c</fullName>
        <inlineHelpText>Required for visa application purposes.</inlineHelpText>
        <label>Had treatment on the NHS Whilst in Uk?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rotation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Right_Visa_Track</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(
text(Rotation_Campus__c ) = text(Visa_Track__r.Campus1__c),
text(Rotation_Campus__c) = text(Visa_Track__r.Campus2__c),
text(Rotation_Campus__c) = text( Visa_Track__r.Campus_3__c )))
&amp;&amp;
 $User.Profile_Name__c   &lt;&gt; &apos;System Administrator&apos;
&amp;&amp;
ischanged( Visa_Track__c )</errorConditionFormula>
        <errorMessage>Please use a Visa Track that applies to the current Rotation Campus</errorMessage>
    </validationRules>
</CustomObject>